# hw_11_rest

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7ea2830ef2dc_init.py
src/: schemas.py
src/conf/: config.ini
src/database/: db.py
